<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="20sp"
        android:typeface="normal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/memory_time_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/memory_time_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_value"
        android:textSize="34sp"
        android:typeface="monospace"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/in_between"/>

    <TextView
        android:id="@+id/in_between"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_indicator"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintTop_toBottomOf="@+id/memory_time_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/memory_time_content_max" />

    <TextView
        android:id="@+id/memory_time_content_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_time_dummy"
        android:textSize="34sp"
        android:typeface="monospace"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_between"
        app:layout_constraintBottom_toTopOf="@+id/choose_save_text"/>

    <TextView
        android:id="@+id/choose_save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_mem_contents_save"
        android:textAlignment="center"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memory_time_content_max"
        app:layout_constraintBottom_toTopOf="@+id/button_save_minute"/>

    <Button
        android:id="@+id/button_save_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/one_minute"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button_save_five_minutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_save_text" />

    <Button
        android:id="@+id/button_save_five_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/five_minutes"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button_save_all_minutes"
        app:layout_constraintStart_toEndOf="@+id/button_save_minute"
        app:layout_constraintTop_toBottomOf="@+id/choose_save_text" />

    <Button
        android:id="@+id/button_save_all_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dummy_all_minutes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_save_five_minutes"
        app:layout_constraintTop_toBottomOf="@+id/choose_save_text" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_all_minutes"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
